; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/mm/nohash/extr_8xx.c_v_block_mapped.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/mm/nohash/extr_8xx.c_v_block_mapped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PHYS_IMMR_BASE = common dso_local global i64 0, align 8
@__map_without_ltlbs = common dso_local global i64 0, align 8
@VIRT_IMMR_BASE = common dso_local global i64 0, align 8
@IMMR_SIZE = common dso_local global i64 0, align 8
@PAGE_OFFSET = common dso_local global i64 0, align 8
@block_mapped_ram = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @v_block_mapped(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* @PHYS_IMMR_BASE, align 8
  store i64 %5, i64* %4, align 8
  %6 = load i64, i64* @__map_without_ltlbs, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i64 0, i64* %2, align 8
  br label %39

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @VIRT_IMMR_BASE, align 8
  %12 = icmp uge i64 %10, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %9
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* @VIRT_IMMR_BASE, align 8
  %16 = load i64, i64* @IMMR_SIZE, align 8
  %17 = add i64 %15, %16
  %18 = icmp ult i64 %14, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %13
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* %3, align 8
  %22 = add i64 %20, %21
  %23 = load i64, i64* @VIRT_IMMR_BASE, align 8
  %24 = sub i64 %22, %23
  store i64 %24, i64* %2, align 8
  br label %39

25:                                               ; preds = %13, %9
  %26 = load i64, i64* %3, align 8
  %27 = load i64, i64* @PAGE_OFFSET, align 8
  %28 = icmp uge i64 %26, %27
  br i1 %28, label %29, label %38

29:                                               ; preds = %25
  %30 = load i64, i64* %3, align 8
  %31 = load i64, i64* @PAGE_OFFSET, align 8
  %32 = load i64, i64* @block_mapped_ram, align 8
  %33 = add i64 %31, %32
  %34 = icmp ult i64 %30, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %29
  %36 = load i64, i64* %3, align 8
  %37 = call i64 @__pa(i64 %36)
  store i64 %37, i64* %2, align 8
  br label %39

38:                                               ; preds = %29, %25
  store i64 0, i64* %2, align 8
  br label %39

39:                                               ; preds = %38, %35, %19, %8
  %40 = load i64, i64* %2, align 8
  ret i64 %40
}

declare dso_local i64 @__pa(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
